--- a/dclass_application/templates/_header.html
+++ b/dclass_application/templates/_header.html
@@ -1,14 +1,12 @@
 <header>
-<a href="{% url 'index' %}">同志社大学授業検索サーチ</a>
-
-
-{% if user.is_authenticated %}
-{{login_user}}
-<a href={% url 'signout' %}>ログアウト</a>
-{% else %}
-
-<a href={% url 'signup' %}>新規登録</a>
-<a href={% url 'signin' %}>ログイン</a>
-{% endif %}
-
+    <ul>
+        <li><a href={% url 'index' %}>同志社大学授業検索サーチ</a></li>
+        {% if user.is_authenticated %}
+            <li><a href={% url 'profile' %}>プロフィール</a>
+            <li><a href={% url 'account_logout' %}>ログアウト</a></li>
+        {% else %}
+            <li><a href={% url 'account_login' %}>ログイン</a>        
+            <li><a href={% url 'account_signup' %}>新規登録</a></li>
+        {% endif %} 
+    </ul>
 </header>
