--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,15 +2,23 @@
 
 {% block main %}
 <div class="wrapper">
-    <h1>ログイン</h1>
-
-    <div>
-    <form method = 'post'>
-        {% csrf_token %}
-        {{ form.password }}
-        {{ form.login }}
-        <button type = 'submit'>ログイン</button>
-    </form>
+    <div class="log_form">
+        <form method = 'post'>
+            <h1>ログイン</h1>
+            {% csrf_token %}
+            <ul>
+                <h4>メールアドレス</h4>
+                <li>{{ form.login }}</li>
+                <h4>パスワード</h4>
+                <li>{{ form.password }}</li>
+                {% comment %} <li><button type = 'submit' class='btn'>ログイン</button></li> {% endcomment %}
+                <li class="center"><input type = 'submit' class='btn login', value="ログイン"></input></li>
+                
+            </ul>
+        </form>
+        <div class="center">
+            <a href={% url 'account_signup' %}><input type="submit" value="新規登録", class="btn"></a>
+        </div>
     </div>
 </div>
 
