--- a/dclass_application/static/css/main.css
+++ b/dclass_application/static/css/main.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body {
+    font-family: "Noto Sans Japanese", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", "ＭＳ Ｐゴシック", "Osaka", "sans-serif";
+}
+
 a {
     text-decoration: none;
     color: black;
@@ -69,14 +73,27 @@ html {
 
 .class_result {
     width: 100%;
-    /* height: 70px; */
     padding: 5px;
     border-bottom: 1px solid var(--my-gray);
     margin: 10px 0px;
+    display: flex;
 }
 
+.class_result_left {
+    width: 35%;
+}
+
+.class_result_middle {
+    width: 35%;
+}
+
+.class_result_right {
+    width: 30%;
+}
+
+
+
 .title {
-    /* background-color: wheat; */
     display: flex;
     flex-wrap: wrap;
     height: 45px;
@@ -119,20 +136,99 @@ html {
 .btn {
     color: white;
     border: none;
-    width: 100px;
     height: 40px;
     border-radius: 5px;
     cursor: pointer;
+    background-color: #1D9BF0;
 }
 
 .search_btn {
-    background-color: #0C51E0;
+    background-color: #F06B6B;
+    width: 300px;
+    margin-top: 15px;
 }
 
 .twitter {
     background-color: #1D9BF0;
+    width: 100px;
 }
 
 .line {
     background-color: #41C007;
+    width: 100px;
+}
+
+.favorite_btn {
+    background-color: orange;
+    width: 100px;
+}
+
+.log_form {
+    margin: 0 auto;
+    width: 50%;
+    /* text-align: center; */
+}
+
+.log_form h1 {
+    text-align: center;
+}
+
+.log_form li {
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+
+.log_form input{
+    width: 100%;
+    height: 25px;
+}
+
+.log_form .btn {
+    width: 200px;
+    height: 40px;
+}
+
+.center {
+    text-align: center;
+}
+
+.login {
+    background-color: #F06B6B;
+}
+
+input[type='radio'] {
+    display: none;
+}
+
+input[type='radio']:checked+label {
+    box-sizing: border-box;
+    border: 1px solid var(--my-gray);
+    color: white;
+    background-color: #1D9BF0;
+}
+
+.radio_wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    text-align: center;
+}
+
+.radio_wrap label{
+    box-sizing: border-box;
+    display: inline-block;
+    border: 1px solid var(--my-gray);
+    height: 50px;
+    width: 100%;
+    line-height: 50px;
+}
+
+.reset_condition a{
+    /* width: px; */
+    border-bottom: 1px solid black;
+}
+
+.title {
+    font-weight: 200;
 }
