--- a/dclass_application/templates/class.html
+++ b/dclass_application/templates/class.html
@@ -14,20 +14,80 @@
     <div class="a_transition">
         <h1>A率の推移</h1>
         <div class="a_chart">
-            <canvas id="chart"></canvas>
+            {% if user.is_authenticated %}
+                <canvas id="chart"></canvas>
+            {% else %}
+                <p>ログインするとA率を確認できます</p>
+            {% endif %}
         </div>
     </div>
     <div class="comment">
         <h1>コメント</h1>
+        {% for comment in comments %}
+            <p>評価:☆{{ comment.star }}</p> 
+            <p>コメント: {{comment.text}}</p>
+        {% empty %}
+            <p>コメントがありません</p>
+        {% endfor %}
+        {% if user.is_authenticated %}
+            <a href={% url 'add_comment' user.id cl.id %}>
+                <p>授業を評価する</p>
+            </a>
+        {% endif %}
     </div>
     <div class="share">
         <h1>シェア</h1>
-        <input type="submit" value="twitter", class="twitter btn">
-        <input type="submit" value="LINE", class="line btn">    
-    </div>
+        {% comment %} <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">
+            <input type="submit" value="twitter" class="twitter btn">
+        </a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> {% endcomment %}
+        <input type="submit" value="twitter" class="twitter btn">
 
+        <input type="submit" value="LINE" class="line btn">  
+        {% if user.is_authenticated %}  
+            {% if checked_favorite %}
+            <a href={% url 'remove_favorite' user.id cl.id %}>
+                <input type="submit" value="お気に入り解除" class="favorite_btn btn"> 
+            </a> 
+            {% else %}
+            <a href={% url 'favorite' user.id cl.id %}>
+                <input type="submit" value="お気に入り" class="favorite_btn btn"> 
+            </a>
+            {% endif %}
+
+        {% else %}
+            <p><a href={% url 'account_login' %}>ログイン</a>することでお気に入り登録が可能です</p>
+        {% endif %} 
+    </div>
+    <div class="good">
+        <input type="submit" value="いいね" class="btn">
+    </div>
     <div class="related_recommend">
-        <h1>この授業に似たおすすめ授業</h1>
+        <h1>関連おすすめ授業</h1>
+        {% for cl in related_classes %}
+            <a href="{% url 'class' cl.id %}">
+                <div class="class_result">
+                    <div class="class_result_left">
+                        <h2>{{ cl.class_name }}</h2>
+                        <h5>{{ cl.teacher }}先生</h5>
+                    </div>
+                    <div class="class_result_middle">
+                        <ul>
+                            <li>{{ cl.year }}年度</li>
+                            <li>{{ cl.term }}</li>
+                            <li>{{ cl.place}}</li>
+                        </ul>
+                    </div>
+                    <div class="class_result_right">
+                        <ul>
+                            <li>いいね{{ cl.favorite }}</li>
+                        </ul>
+                    </div>
+                </div>
+            </a>
+        {% empty %}
+            <p>おすすめクラスはありません</p>
+        {% endfor %}
     </div>
 </div>
 
