--- a/dclass_application/static/css/main.css
+++ b/dclass_application/static/css/main.css
@@ -21,6 +21,7 @@ li {
     --my-light-gray: #F3F3F3;
     --my-black: #353A40;
     --my-blue: #1458e0;
+    --my-pink: #F06B6B;
 }
 
 header {
@@ -29,19 +30,21 @@ header {
     height: 40px;
     line-height: 40px;
     padding: 8px 16px; 
+    /* display: flex; */
 }
 
 header ul {
     display: flex;
 }
 
-header ul li:first-child {
-    width: 85%;
+.header_right {
+    margin: 0 0 0 auto;
+    display: flex;
 }
 
-header ul li:not(:first-child){
-    width: calc(15/2%);
-    margin: 0 auto;
+.header_right li {
+    padding: 0px 10px;
+    box-sizing: border-box;
 }
 
 header a {
@@ -76,7 +79,8 @@ html {
 
 .class_result {
     width: 100%;
-    padding: 5px;
+    padding: 5px 10px;
+    box-sizing: border-box;
     border-bottom: 1px solid var(--my-gray);
     margin: 10px 0px;
     display: flex;
@@ -116,12 +120,44 @@ html {
     color: #EF170D;
 }
 
+.heading {
+    border-bottom: 1px solid var(--my-gray);
+}
+
 .a_transition {
     width: 100%;
-    /* height: 30px; */
     border: 1px solid var(--my-gray);
     border-radius: 5px;
     box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
+.evaluation_ratio {
+    width: 100%;
+    /* border: 1px solid var(--my-gray); */
+    /* border-radius: 5px; */
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
+.evaluation_ratio table {
+    width: 100%;
+    text-align: center;
+    border-collapse: collapse;
+    border-radius: 5px;
+}
+
+.evaluation_ratio table th {
+    background-color: var(--my-light-gray);
+}
+
+.evaluation_ratio table th {
+    border: solid 1px var(--my-light-gray);
+}
+
+
+.evaluation_ratio table td {
+    border: solid 1px var(--my-light-gray);
 }
 
 .a_chart {
@@ -147,6 +183,14 @@ html {
 
 .class_show_left {
     width: 50%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.class_show_right {
+    width: 50%;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .bold {
@@ -161,18 +205,17 @@ html {
 .basic_info th {
     border-top: 1px solid var(--my-gray);
     box-sizing: border-box;
+    padding: 10px 0px;
     width: 30%;
 }
 
 .basic_info td {
     border-top: 1px solid var(--my-gray);
+    padding: 10px 0px;
     box-sizing: border-box;
 }
 
 
-.class_show_right {
-    width: 50%;
-}
 
 .class_show li{
     border-bottom: 1px solid var(--my-gray);
@@ -237,8 +280,16 @@ html {
     font-size: 13px;
 }
 
+.my-blue {
+    color: var(--my-blue)
+}
+
 .my-gray {
     color: var(--my-gray);
+}
+
+.my-pink {
+    color: var(--my-pink);
 }
 
 .log_form {
@@ -268,6 +319,12 @@ html {
 
 .center {
     text-align: center;
+}
+
+.how_to_search {
+    text-align: center;
+    font-size: 16px;
+    padding: 15px 0px;
 }
 
 .login {
@@ -314,9 +371,10 @@ input[type='radio']:checked+label {
 
 .recent_comment {  
     width: 100%;
-    padding: 5px;
+    padding: 5px 10px;
+    box-sizing: border-box;
     border-bottom: 1px solid var(--my-gray);
-    margin: 10px 0px;
+    margin: 10px 0px 15px;
     display: flex;
 }
 
@@ -331,6 +389,13 @@ input[type='radio']:checked+label {
 
 .recent_comment_right {
     width: 25%;
+}
+
+.teacher_name {
+    font-size: 12px;
+    margin-left: 5px;
+    color: #979797;
+    /* font-weight: lighter; */
 }
 
 .comment_w {
@@ -352,5 +417,5 @@ input[type='radio']:checked+label {
 }
 
 .related_recommend {
-    margin-top: 30px;
+    margin-top: 50px;
 }
