--- a/dclass_application/templates/_header.html
+++ b/dclass_application/templates/_header.html
@@ -1,12 +1,16 @@
 <header>
     <ul>
-        <li><a href={% url 'index' %}>同志社大学授業検索サーチ</a></li>
-        {% if user.is_authenticated %}
-            <li><a href={% url 'profile' %}>プロフィール</a>
-            <li><a href={% url 'account_logout' %}>ログアウト</a></li>
-        {% else %}
-            <li><a href={% url 'account_login' %}>ログイン</a>        
-            <li><a href={% url 'account_signup' %}>新規登録</a></li>
-        {% endif %} 
+        <div class="header_left">
+            <li><a href={% url 'index' %}>同志社大学授業検索サーチ</a></li>
+        </div>
+        <div class="header_right">
+            {% if user.is_authenticated %}
+                <li><a href={% url 'profile' %}>プロフィール</a></li>
+                <li><a href={% url 'account_logout' %}>ログアウト</a></li>
+            {% else %}
+                <li><a href={% url 'account_login' %}>ログイン</a>        
+                <li><a href={% url 'account_signup' %}>新規登録</a></li>
+            {% endif %} 
+        </div>
     </ul>
 </header>
